Swagger UI is added